--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "lucide-react": "^0.295.0",
-    "next": "14.0.4",
+    "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3"
