new client and supplier

--- a/package.json
+++ b/package.json
@@ -5,20 +5,31 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-     "start": "npx serve@latest out",
-    "lint": "next lint"
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "lucide-react": "^0.295.0",
-    "next": "^15.0.3",
+    "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "react-intersection-observer": "^9.5.3",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.42",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "14.0.4"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
