--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: npm
       - name: Install dependencies
-        run: npm ci
+        run: npm install  # Changed from npm ci to npm install
       - name: Build
         run: npm run build
         env:
