--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@sendgrid/mail": "^8.1.4",
     "clsx": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.295.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
